# catkin_hbp

./: hbp_software_dev_coding_task.odt
src/gazebo_environment/: CMakeLists.txt  package.xml
src/gazebo_environment/launch/: hbp_husky.launch
src/gazebo_environment/models/husky_model/: model.sdf
src/gazebo_environment/worlds/: husky_world.sdf
src/gazebo_msgs2/: CMakeLists.txt  package.xml
src/gazebo_msgs2/msg/: LinkStates.msg  SoundWithSource.msg
src/gazebo_msgs2/srv/: GetCameraImage.srv  GetJointStates.srv  GetModelProperties.srv  GetSensorNoiseProperties.srv  SetHuskyWheelSpeeds.srv  SetJointStates.srv  SetSensorNoiseProperties.srv
src/gazebo_sensor_mock/: CMakeLists.txt  package.xml
src/gazebo_sensor_mock/scripts/: sound_node.py
src/husky_gazebo_controller/: CMakeLists.txt  README.md  package.xml  requirements.txt
src/husky_gazebo_controller/scripts/: husky_controller.py  mobilenet_v2_classifier.py
src/husky_gazebo_plugins/: CMakeLists.txt  package.xml
src/husky_gazebo_plugins/include/husky_plugin/: husky_plugin.h
src/husky_gazebo_plugins/src/: husky_plugin.cpp
